<resources>
    <string name="app_name">rakmovies</string>
    <string name="nav_header_desc">This is a navbar</string>

    <!-- drawer -->
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="home">Home</string>

    <!-- default strings -->
    <string name="default_username">Guest</string>
    <string name="default_return_to_login_txt">@string/sign_in</string>
    <string name="brand">Blockbuster</string>

    <!-- shared -->
    <string name="hint_search">Search Movies...</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>

    <!-- LoginActivity -->
    <string name="or">- or -</string>
    <string name="skip">Skip</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>

</resources>
