<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/blockbusterYellow"
              android:paddingTop="40dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                <ImageView
                        android:layout_gravity="center"
                        android:id="@+id/storefrontIV"
                        android:src="@mipmap/logo_backup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginTop="10dp">
                <TextView
                        android:id="@+id/usernameLabel"
                        style="@style/LoginTV"
                        android:text="@string/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <EditText
                        style="@style/LoginInput"
                        android:id="@+id/usernameET"
                        android:hint="@string/username"/>

                <TextView
                        android:id="@+id/passwordLabel"
                        style="@style/LoginTV"
                        android:text="@string/password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"/>


                <EditText
                        style="@style/LoginInput"
                        android:layout_marginBottom="40dp"
                        android:id="@+id/passwordET"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/signInBtn"
                    style="@style/LoginButton"
                    android:text="@string/sign_in"
                    android:enabled="false"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"/>

            <TextView
                    android:id="@+id/justAnOr"
                    style="@style/LoginTV"
                    android:text="@string/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"/>


            <com.google.android.material.button.MaterialButton
                    android:id="@+id/skipBtn"
                    style="@style/LoginButton"
                    android:text="@string/skip"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Button"/>

        </LinearLayout>
</LinearLayout>